JVM-1738: Incorrect jvms when PEA materializes an object in merge_common (#7)
* JVM-1738: Incorrect jvms when PEA materializes an object in merge_common

This patch copys all debuginfo nodes from the original AllocateNode and clones its JVMState as well.
We deploy a uncommon_trap rather than generating the exception for real. That shouluhd resolve JVM-1730.

The reason we give up the idea to use add_safepoint_edges() is that GraphKit's bci may point
to an arbitary bytecode and sp even doesn't match its current bci.

The another benefit is that it can mimic the original AllocateNode with the exactly same debuginfo and JVMState.
If OOME does emerge, the stacktrace is as if we doesn't move AllocateNode ever.

* Update passive materialization.

* Add a test for JVM-1738

---------

Co-authored-by: Xin Liu <xxinliu@amazon.com>