@@ -12,3 +12,4 @@ JVM_FLAGS="-XX:+PrintEscapeAnalysis -XX:+PrintEliminateAllocations -XX:+PrintOpt
 ./run3_2.sh -Xlog:gc -XX:+DoPartialEscapeAnalysis $JVM_FLAGS
 ./run3.sh -Xlog:gc -XX:+DoPartialEscapeAnalysis $JVM_FLAGS
 ./run_str.sh  -Xlog:gc -XX:+DoPartialEscapeAnalysis -XX:-UseTLAB  $JVM_FLAGS
+./run_exception.sh -Xlog:gc -XX:+DoPartialEscapeAnalysis $JVM_FLAGS
